# Quantis

./: .gitignore  app.spec  q_launch.py  q_launch.spec  requirements.txt  sample_table.py  web_launch.py
Package/: pyproject.toml
Package/quantis/: app.py  cash_or_new.py  ncbi_species_parser.py  open_tsv_files_dialog.py  string_request.py  utils.py
Package/quantis/assets/: style.css
quantis/: LICENSE  pyproject.toml
quantis/quantis/: __init__.py  app.py  app_legacy.py  cash_or_new.py  df_prep.py  filetypes.py  knn_imputation.py  log_setup.py  ms1diffacto.py  ncbi_species_parser.py  open_tsv_files_dialog.py  string_request.py  utils.py
quantis/quantis/assets/: resizer.js  scripts.js  style copy.css  style.css
