[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Quantis"
authors = [
    {name = "Daniil Pomogaev", email = "pomogaev.dd@phystech.edu"}
]
description = "GUI for differential expression analysis"
classifiers = ['Intended Audience :: Science/Research',
                            'Programming Language :: Python :: 3',
                            'Topic :: Education',
                            'Topic :: Scientific/Engineering :: Bio-Informatics',
                            'Topic :: Scientific/Engineering :: Chemistry',
                            'Topic :: Scientific/Engineering :: Physics']
dependencies = [
    "pandas", "plotly", "dash", "dash_daq",
    "statsmodels", "scikit-learn", "scipy",
    "pywebview", "requests"
]
version = "0.5"

[project.scripts]
quantis = "quantis.app:launch_app"